Update Home credit risk default.ipynb

--- a/Home credit risk default.ipynb
+++ b/Home credit risk default.ipynb
@@ -6315,7 +6315,7 @@
     "\n",
     "\n",
     "\n",
-    "- Homens em quase todos os casos são mais inadimplentes que mulheres, isso so muda quando o individuo é do sexo feminino e o tipo de renda é maternity leave\n",
+    "- Homens em quase todos os casos são mais inadimplentes que mulheres, isso so muda quando o individuo é do sexo feminino e o tipo de renda é maternity leave, visto que renda maternidade é apenas para mulheres.\n",
     "\n"
    ]
   },
